fix arrangment and spacing of summary

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -90,6 +90,11 @@ $brand-color: #4EB276;
   }
 }
 
+.summary-spacer {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
 .subnav {
 
   .subnav-entry {
